--- a/index.htm
+++ b/index.htm
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pokémon API</title>
 </head>
 <body>
     <div>
-        <div>Pokemon info</div>
-        <br>
-        <div id= "pokemon-name"> Name: </div>
-        <div id= "pokemon-types">Types:</div>
+        <div id= "info">Pokemon info</div>
+        <!--<div id= "pokemon-name"> Name: </div>
+        <div>Types:</div>
+        <div id= "pokemon-types"></div>
         <br>
         <div>Abilities</div>
         <div id= "pokemon-abilities"> </div>
+        <div>Image:</div>
+        <img id= "pokemon-image" src="" alt="pokemon">-->
+        <div id= "pokemon-name"> Name: </div>
         <div>Image:</div>
         <img id= "pokemon-image" src="" alt="pokemon">
     </div>
