--- a/index.htm
+++ b/index.htm
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pokémon API</title>
+    <title>Pokemon API</title>
 </head>
 <body>
     <div>
-        <div id= "info">Pokemon info</div>
-        <!--<div id= "pokemon-name"> Name: </div>
+        <div>Pokemon info</div>
+        <div id="pokemon-name">Name: </div>
         <div>Types:</div>
-        <div id= "pokemon-types"></div>
+        <ul id="pokemon-types"></ul>
         <br>
-        <div>Abilities</div>
-        <div id= "pokemon-abilities"> </div>
+        <div>Abilities:</div>
+        <ul id="pokemon-abilities"></ul>
         <div>Image:</div>
-        <img id= "pokemon-image" src="" alt="pokemon">-->
-        <div id= "pokemon-name"> Name: </div>
-        <div>Image:</div>
-        <img id= "pokemon-image" src="" alt="pokemon">
+        <img id="pokemon-image" src="" alt="pokemon">
     </div>
+    <div id="pokemon-images"></div>
 </body>
 <script src="app.js"></script>
 </html>
