--- a/pokemon.htm
+++ b/pokemon.htm
@@ -6,7 +6,8 @@
     <title>Pokimones</title>
 </head>
 <body>
-    <h1>Pokemon</h1>
+    <h1 id="pokemon-name">Name: </h1>
+    <img id="pokemon-image" src="" alt="pokemon">
 </body>
 <script src="pokemon.js"></script>
 </html>
