--- a/index.htm
+++ b/index.htm
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleIndex.css">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <title>Pokemon API</title>
 </head>
 <body>
     <div>
-        <div>Pokemon info</div>
+        <h1 id="Pokedex">Pokedex</h1>
+        <!--
         <div id="pokemon-name">Name: </div>
         <div>Types:</div>
         <ul id="pokemon-types"></ul>
@@ -16,9 +18,10 @@
         <div>Abilities:</div>
         <ul id="pokemon-abilities"></ul>
         <div>Image:</div>
-        <img id="pokemon-image" src="" alt="pokemon">
+        <img id="pokemon-image" src="" alt="pokemon">--->
     </div>
     <div id="pokemon-images"></div>
+    <div id="pokemon-id"></div>
 </body>
 <script src="app.js"></script>
 </html>
