--- a/pokemon.htm
+++ b/pokemon.htm
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <title>Pokimones</title>
 </head>
 <body>
-    <h1 id="pokemon-name">Name: </h1>
-    <img id="pokemon-image" src="" alt="pokemon">
+    <h1 id="pokemon-name"> </h1>
+    
+    <h2 id="center2">Tipo: </h2>
+    <h2 id="pokemon-types"></h2>
+    <h2 id="center">Habilidades: </h2>
+    <h2 id="pokemon-abilities"> </h2>
+    <div id="pokemon-images" src="" alt="Pokemon">
+        
 </body>
 <script src="pokemon.js"></script>
 </html>
